--- a/index.html
+++ b/index.html
@@ -2,22 +2,12 @@
 <html lang="en">
     <head>
         <title>Namaste React</title>
+        <link rel="stylesheet" href="index.css">
     </head>
     <body>
-        <div>
-            Hello
-        </div>
         <div id="root">
-            <h1>Askdg is gher</h1>
+            <h1>Akshay is Here</h1>
         </div>
-        <!-- <script>
-            const heading = document.createElement("h1");
-            heading.innerHTML = "Hello world from javascript";
-            const root = document.getElementById("root");
-            root.appendChild(heading);
-        </script> -->
-        <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-        <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-        <script src="/App.js"></script>
+        <script type="module" src="./src/App.js"></script>
     </body>
 </html>
